--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.7.1"
+cardviewV7 = "28.0.0"
 kotlin = "1.9.24"
+glide = "4.16.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -12,7 +14,9 @@ constraintlayout = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+cardview-v7 = { module = "com.android.support:cardview-v7", version.ref = "cardviewV7" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
